--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input type="text" placeholder="other ammount (taka)">
                </div>
                <div class="btn">
-                <button>Donate</button>
+                <button>Donate Now</button>
             </div>
             </div>
         </div>
